# NordicEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Tests.txt  build.sh  cleaner.sh
CMakeConfigs/: Full.txt  OSOnly.txt  Test.txt  TestFull.txt  TestOS.txt
NordicEngine/: Engine.cpp  Engine.hpp  Includes.hpp  buildNumber.hpp
NordicEngine/Camera/: Camera.cpp  Camera.hpp
NordicEngine/Color/: Color.cpp  Color.hpp
NordicEngine/Exception/: Exception.cpp  Exception.hpp
NordicEngine/ExceptionHandler/: ExceptionHandler.cpp  ExceptionHandler.hpp
NordicEngine/Exceptions/: Exceptions.cpp  Exceptions.hpp
NordicEngine/FileHandler/: FileHandler.cpp  FileHandler.hpp  FileUtils.cpp  FileUtils.hpp
NordicEngine/FileHandler/TextFileReader/: TextFileReader.cpp  TextFileReader.hpp
NordicEngine/FileHandler/TextFileWriter/: TextFileWriter.cpp  TextFileWriter.hpp
NordicEngine/Files/: .Utils.cpp.swp  Files.cpp  Files.hpp  Handler.cpp  Handler.hpp  Loader.cpp  Loader.hpp  Utils.cpp  Utils.hpp
NordicEngine/Files-Old/: Files.cpp  Files.hpp  Utils.cpp
NordicEngine/Files-Old/Handler/: Handler.hpp
NordicEngine/Files-Old/Handler/Lua/: Lua.cpp
NordicEngine/Files-Old/Handler/TextFile/: Reader.cpp  Reader.hpp  Writer.hpp
NordicEngine/Files-Old/Texture/: Texture.cpp  Texture.hpp
NordicEngine/Files/Format/BitMap/: BitMap.cpp  BitMap.hpp
NordicEngine/Files/Format/DDS/: DDS.cpp  DDS.hpp
NordicEngine/Files/Format/Lua/: Lua.cpp  Lua.hpp
NordicEngine/Files/Format/TextFile/: Reader.cpp  Reader.hpp  Writer.cpp  Writer.hpp
NordicEngine/Files/Handler/: Handler.cpp  Handler.hpp
NordicEngine/Files/Handler/BitMap/: BitMap.cpp  BitMap.hpp
NordicEngine/Files/Handler/Lua/: Lua.cpp  Lua.hpp
NordicEngine/Files/Handler/TextFile/: Reader.cpp  Reader.hpp  Writer.cpp  Writer.hpp  Writter.cpp
NordicEngine/Files/Handler/TextFileReader/: TextFileReader.cpp  TextFileReader.hpp
NordicEngine/Files/Handler/TextFileWriter/: TextFileWriter.cpp  TextFileWriter.hpp
NordicEngine/Files/Texture/: Texture.cpp  Texture.hpp
NordicEngine/Input/: Definitions.hpp  Input.cpp  Input.hpp
NordicEngine/Light/: Light.cpp  Light.hpp
NordicEngine/Linux/: Linux.cpp  Linux.hpp
NordicEngine/Logger/: Logger.cpp  Logger.hpp
NordicEngine/Lua/: Lua.cpp  Lua.hpp
NordicEngine/Misc/: Vertex.hpp
NordicEngine/Model/: Model.cpp  Model.hpp
NordicEngine/Noise/: Simplex.cpp  Simplex.hpp
NordicEngine/OS/: OS.hpp  OpenGL.cpp  OpenGL.hpp
NordicEngine/OS/Windows/: Windows.cpp  Windows.hpp
NordicEngine/OS/nonWindows/: nonWindows.hpp
NordicEngine/OS/nonWindows/Linux/: Linux.cpp  Linux.hpp
NordicEngine/OS/nonWindows/OSX/: OSX.hpp  OSX.mm
NordicEngine/OSX/: OSX.hpp  OSX.mm
NordicEngine/Player/: Player.cpp  Player.hpp
NordicEngine/Render/: Manager.cpp  Manager.hpp
NordicEngine/Render/Models/: Manager.cpp  Manager.hpp  Model.cpp  Model.hpp
NordicEngine/Render/Shader/: Shader.cpp  Shader.hpp
NordicEngine/Render/Shaders/: Loader.cpp  Loader.hpp  Program.cpp  Program.hpp  Shader.cpp  Shader.hpp
NordicEngine/Render/Text/: Text.cpp  Text.hpp
NordicEngine/Renderer/: Renderer.cpp  Renderer.hpp
NordicEngine/Settings/: Settings.cpp  Settings.hpp
NordicEngine/Shaders/: Program.cpp  Program.hpp  Shaders.cpp  Shaders.hpp  Shaders.inl  Simple.cpp  Simple.hpp
NordicEngine/Singleton/: Singleton.cpp  Singleton.hpp
NordicEngine/Storage/: Storage.cpp  Storage.hpp
NordicEngine/String/: String.cpp  String.hpp  String.inl
NordicEngine/Threading/Singleton/: Singleton.cpp  Singleton.hpp
NordicEngine/Threading/Threads/: Threads.cpp  Threads.hpp
NordicEngine/Threads/: Threads.cpp  Threads.hpp
NordicEngine/Time/: Time.cpp  Time.hpp
NordicEngine/Utility/: Markov.cpp  Markov.hpp  Maths.cpp  Maths.hpp  NameGen.cpp  NameGen.hpp  Seeder.cpp  Seeder.hpp  Utility.cpp  Utility.hpp
NordicEngine/Window/: Layer.cpp  Layer.hpp  Manager.cpp  Manager.hpp  Window.cpp  Window.hpp
NordicEngine/Windows/: Windows.cpp  Windows.hpp
NordicEngine/nonWindows/: nonWindows.hpp
NordicEngine/sqlite/: CMakeLists.txt
Tests/: FullTests.cpp  Main.cpp  Main.hpp  OSTests.cpp  OSTests.txt  Tests.cpp
